5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1756_1183.log
== TEST (2019-05-26 15:44:56) 
-- CODE:
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:45:28) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:45:49) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:46:37) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:46:52) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:48:15) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:48:32) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:50:05) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vp + vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:50:36) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:51:03) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = []
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 15:53:02) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vet[cont2]
print(vp)
-- EXECUTION TIME:
366.472
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:53:42) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		n = vet[cont2]
	vp = n
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:54:53) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		n = vet[cont2]
	vp = n
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:55:05) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
print(p)
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		n = vet[cont2]
	vp = n
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:57:14) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = vp + vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:57:42) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
vp = zeros(p)
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp = 0 + vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:00:22) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
vp = zeros(p)
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] > 0:
		vp =  vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:06:20) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
vp = zeros(p)
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
cont2 = 0
cont3 = 0
while cont2 < size(vet):
	if vet[cont3] > 0:
		vp = vet[cont3]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:06:42) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
vp = zeros(p)
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
cont2 = 0
cont3 = 0
while cont2 < size(vet):
	if vet[cont3] > 0:
		vp = vet[cont3]
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:07:19) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
vp = zeros(p)
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
cont2 = 0
cont3 = 0
while cont2 < size(vet):
	if vet[cont3] > 0:
		vp = vet[cont3]
	cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:12:59) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
vp = vet
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
cont2 = 0
while cont2 < size(vet):
	if vet[cont2] < 0:
		vp = del(vet[cont2])
	cont2 = cont2 + 1
print(vp)
-- ERROR:
File "XXXX", line 14
    vp = del(vet[cont2])
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:14:20) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1
cont2 = 0
vp = zeros(p)
while cont2 < size(vet):
	if vet[cont2] < 0:
		vp = vet[cont2]
	cont2 = cont2 + 1
print(vp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:16:11) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2 = vet[cont2]
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:16:45) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
vet2 = zeros(p + 1)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2 = vet[cont2]
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:17:30) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
vet2 = zeros(p)
print(vet2)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2 = vet[cont2]
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:18:13) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = vet[cont2]
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:18:38) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = vet[cont2]
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:19:00) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = vet[cont2]
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:19:05) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = vet[cont2]
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- EXECUTION TIME:
0.452668
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:19:26) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:19:56) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:20:01) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- EXECUTION TIME:
0.466213
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:20:31) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:21:15) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = int(zeros(p))
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:21:38) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(int(p))
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:22:55) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- EXECUTION TIME:
0.528165
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:39:04) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 17:39:12) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- EXECUTION TIME:
0.385877
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:39:15) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:40:47) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 21:12:43) 
-- CODE:
from numpy import*
vet = array(eval(input("vetor: ")))

p = 0
cont1 = 0
while cont1 < size(vet):
	if vet[cont1] > 0:
		p = p + 1
	cont1 = cont1 + 1

cont2 = 0
cont3 = 0
vet2 = zeros(p)
while cont2 < size(vet):
	if vet[cont2] > 0:
		vet2[cont3] = int(vet[cont2])
		cont3 = cont3 + 1
	cont2 = cont2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:44:44) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arrange(i)
while(k < size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:45:19) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arrange(i)
while(k < size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- EXECUTION TIME:
0.482747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 7, in <module>
    if(v[k]>0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:45:28) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arrange(i)
while(k < size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:46:39) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arange(i)
while(k < size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:46:42) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arange(i)
while(k < size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- EXECUTION TIME:
0.387197
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 7, in <module>
    if(v[k]>0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:46:45) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arange(i)
while(k < size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:47:56) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
v = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arange(i)
while(k<size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:48:41) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arange(i)
while(k<size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:48:56) 
-- CODE:
from numpy import*
v = array(eval(input("vetor: ")))
i = 0
j = 0
k = 0
while (k < size(v)):
	if(v[k]>0):
		i = i +1
	k = k + 1
k = 0
t = arange(i)
while(k<size(v)):
	if(v[k]>0):
		t[j]=v[k]
		j = j + 1
	k = k +1
print(t)
-- EXECUTION TIME:
0.407998
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
